--- a/Week-10/url-shortner/.gitignore
+++ b/Week-10/url-shortner/.gitignore
@@ -1,4 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+Week 10 Assignment.pdf
 
 # dependencies
 /node_modules
